# optave-codegraph

./: .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  DEPENDENCIES.md  FOUNDATION.md  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  SUPPORT.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.js  vitest.config.ts
.claude/: settings.json
.husky/: commit-msg  pre-commit  pre-push
crates/codegraph-core/: Cargo.toml  package.json
crates/codegraph-core/src/: analysis.rs  ast_db.rs  build_pipeline.rs  cfg.rs  cfg_db.rs  change_detection.rs  complexity.rs  dataflow.rs  dataflow_db.rs  edge_builder.rs  edges_db.rs  file_collector.rs  import_edges.rs  insert_nodes.rs  lib.rs  native_db.rs  parallel.rs  parser_registry.rs  read_queries.rs  read_types.rs  roles_db.rs  structure.rs  types.rs
crates/codegraph-core/src/ast_analysis/: cfg.rs  dataflow.rs
crates/codegraph-core/src/db/: connection.rs
crates/codegraph-core/src/db/repository/: graph_read.rs
crates/codegraph-core/src/domain/graph/builder/: pipeline.rs
crates/codegraph-core/src/domain/graph/builder/stages/: build_edges.rs  detect_changes.rs  insert_nodes.rs
crates/codegraph-core/src/extractors/: bash.rs  c.rs  clojure.rs  cpp.rs  csharp.rs  cuda.rs  dart.rs  elixir.rs  erlang.rs  fsharp.rs  gleam.rs  go.rs  groovy.rs  haskell.rs  hcl.rs  helpers.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  mod.rs  objc.rs  ocaml.rs  php.rs  python.rs  r_lang.rs  ruby.rs  rust_lang.rs  scala.rs  solidity.rs  swift.rs  verilog.rs  zig.rs
crates/codegraph-core/src/graph/classifiers/: roles.rs
docs/: BACKLOG.md  ROADMAP.md  admin-guide.md  dogfooding-guide.md  improvement-plan.md  json-schema.md  llm-integration.md  recommended-practices.md
roadmap/: BACKLOG.md
scripts/: bench-version.js  benchmark.js  benchmark.ts  build-wasm.ts  check-grammar-versions.mjs  ci-install-native.mjs  embedding-benchmark.js  embedding-benchmark.ts  gen-deps.cjs  import-jelly-micro.mjs  incremental-benchmark.js  incremental-benchmark.ts  npm-publish-retry.sh  parity-compare.mjs  query-benchmark.js  query-benchmark.ts  resolution-benchmark.ts  sync-native-versions.js  token-benchmark-issues.js  token-benchmark.js  token-benchmark.ts  ts-resolve-hooks.js  ts-resolve-loader.js  update-benchmark-report.js  update-benchmark-report.ts  update-embedding-report.js  update-incremental-report.js  update-incremental-report.ts  update-query-report.js  update-token-report.js  verify-imports.js  verify-imports.ts
src/: ast.js  audit.js  batch.js  branch-compare.js  builder.js  cfg.js  change-journal.js  check.js  cli.js  cli.ts  cochange.js  communities.js  complexity.js  config.js  constants.js  cycles.js  dataflow.js  db.js  embedder.js  export.js  flow.js  index.cjs  index.js  index.ts  manifesto.js  mcp.js  native.js  owners.js  paginate.js  parser.js  queries.js  registry.js  resolve.js  sequence.js  structure.js  triage.js  types.ts  update-check.js  (+2 more)
(+902 files in other folders)
