[package]
name = "codegraph-core"
version = "3.5.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-hcl = "1"
rayon = "1"
# `bundled` embeds a second SQLite copy (better-sqlite3 already bundles one).
# This is intentional: Windows CI lacks a system SQLite, and WAL coordination
# between the two instances is handled safely at the OS level.
rusqlite = { version = "0.32", features = ["bundled"] }
send_wrapper = "0.6"

[build-dependencies]
napi-build = "2"
