[package]
name = "codegraph-core"
version = "3.8.1"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-kotlin-sg = "0.4"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.25"
tree-sitter-bash = "0.23"
tree-sitter-hcl = "1"
tree-sitter-elixir = "0.3"
tree-sitter-lua = "0.2"
tree-sitter-dart = "0.0.4"
tree-sitter-zig = "1"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"
rayon = "1"
ignore = "0.4"
sha2 = "0.10"
# `bundled` embeds a second SQLite copy (better-sqlite3 already bundles one).
# This is intentional: Windows CI lacks a system SQLite, and WAL coordination
# between the two instances is handled safely at the OS level.
rusqlite = { version = "0.32", features = ["bundled"] }
send_wrapper = "0.6"

[build-dependencies]
napi-build = "2"
